# tesiLM

./: README.md
install/: local_setup.sh  setup.sh
install/cameras/share/cameras/: local_setup.sh  package.dsv  package.ps1  package.sh
install/cameras/share/cameras/cmake/: camerasConfig.cmake
install/cameras/share/cameras/launch/: my_launch_file.launch.py  px4_launch.py  spawn_cameras.launch.py
install/cameras/share/cameras/models/iris/: iris.sdf
install/cameras/share/cameras/models/my_camera_1/: model.sdf
install/cameras/share/cameras/models/my_camera_2/: model.sdf
install/cameras/share/cameras/models/my_camera_3/: model.sdf
install/cameras/share/cameras/models/my_camera_4/: model.sdf
install/px4/share/px4/: local_setup.sh  package.sh
install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: package.sh
install/tuo_pacchetto/share/tuo_pacchetto/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/cameras/: CMakeLists.txt  package.xml
src/cameras/models/my_camera_5/: model.sdf
src/cameras/models/my_camera_6/: model.sdf
src/cameras/models/my_camera_7/: model.sdf
src/cameras/models/my_camera_8/: model.sdf
src/cameras/worlds/: gazebocameras.world
src/nodi/: CMakeLists.txt
src/nodi/launch/: launch_nodi.launch.py
src/nodi/src/: nodo.cpp
(+4 files in other folders)
